--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/OpenBMB/InfiniteBench.git
 [submodule "RULER"]
 	path = RULER
-	url = https://github.com/hsiehjackson/RULER.git
+	url = https://github.com/jhuang265/RULER.git
